<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DomoControl</string>
    <string name="action_settings">Settings</string>
    
    <string name="system_list_item_status_description">Status</string>
    
	<string name="image_error_description">Error</string>
	<string name="connecting_message">Please wait while connecting</string>
	<string name="network_unknown_error">Unknown connection error, please check settings and try again</string>
	
    <string name="power_loging_error">Authentication error, please check your credentials and try to connect again</string>
    <string name="power_network_error">Remote host not found, please check your settings and try to connect again</string>
    
    <string name="power_connect_settings_btn">Connect</string>
    <string name="power_cancel_settings_btn">Cancel</string>
    <string name="power_apply_settings_btn">Apply</string>
    <string name="power_clear_settings_btn">Clear</string>
    
    <string name="power_add_event">Add event</string>
    
    <string name="power_tab_control">Monitor</string>
    <string name="power_tab_timer">Timer</string>
    <string name="power_tab_config">Setup</string>
    
    <string name="power_timer_event_time">Time</string>
    <string name="power_timer_event_action">Action</string>
    <string name="power_timer_event_socket">Socket</string>
    <string name="power_timer_status">Timer status</string>
    <string name="power_event_status_on">ENABLED</string>
    <string name="power_event_status_off">DISABLED</string>
    <string name="power_timer_event_list">List of events</string>
    <string name="power_event_action_desc">Action</string>
    <string name="power_event_delete">Delete</string>
    
    <string name="power_settings_status">Status</string>
    <string name="power_settings_status_desc">Disconnected</string>
    <string name="power_settings_status_ok">Connected</string>
    
    <string name="power_socket_header_desc">Plug sockets name</string>
    <string name="power_socket1_name_desc">Socket 1</string>
    <string name="power_socket2_name_desc">Socket 2</string>
    <string name="power_socket3_name_desc">Socket 3</string>
    <string name="power_socket4_name_desc">Socket 4</string>
    
    <string name="settings_desc">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="power_ip">Host IP</string>
    <string name="power_ip_desc">HostName or Ip (Ex: 192.168.0.1)</string>
    <string name="power_port">Port</string>
    <string name="power_port_desc">Port</string>
    <string name="power_password">Password</string>
    <string name="power_password_desc"></string>
    <string name="settings_ok">Save</string>
    <string name="settings_cancel">Cancel</string>
    
    <string name="light_tab_scenes">Scenes</string>
    <string name="light_tab_lights">Lights</string>
    <string name="light_tab_config">Setup</string>
    
    <string name="light_press_link">Press the link button on the bridge</string>
    <string name="light_link_description">Link auth required</string>
    <string name="light_network_error">Remote bridge not found, please check your settings and try to find bridge again or configure its address</string>
    <string name="light_connect_address_settings_btn">Connect to bridge</string>
    <string name="light_find_settings_btn">Find bridge</string>
    
    <string name="light_groups_title">Groups</string>
    <string name="light_scenes_title">Scenes</string>
    
    <string name="light_switch_on">On</string>
    <string name="light_switch_off">Off</string>
    
    <string name="light_colorpicker_hue">hue</string>
    <string name="light_colorpicker_saturation">saturation</string>
    <string name="light_colorpicker_brightness">brightness</string>
    
    <string name="light_save_scenes_btn">Save scene</string>
    
    <string name="light_edit_name_desc">Edit light names</string>
    <string name="light_apply_settings_btn">Apply</string>
    <string name="light_clear_settings_btn">Clear</string>
    
    <string name="light_scene_save_title">Save scene</string>
    <string name="light_scene_save_message">Enter a name for your scene</string>
    
    <string name="light_scene_delete_title">Delete scene</string>
    <string name="light_scene_delete_message">Are you sure you want to delete this scene?</string>
    
    <string name="light_settings_status">Status</string>
    <string name="light_settings_status_desc">Disconnected</string>
    <string name="light_settings_status_ok">Connected</string>
    
    <string name="wemo_default_name">Socket</string>
	<string name="searching_message">Searching devices</string>
	<string name="find_error">Could not find devices</string>
    <string name="wemo_settings_devices">Devices</string>
    
    <string name="arrow_up">Up</string>
    <string name="arrow_down">Down</string>
    
    <string name="delete">Delete</string>
    
    <string name="widget_light_title">DomoControl</string>
    <string name="widget_light_desc">Lights</string>
    <string name="widget_light_on">ON</string>
    <string name="widget_light_off">OFF</string>
    
    
    <string name="system_name_power">Power</string>
    <string name="system_name_light">Light</string>
    <string name="system_name_wemo">Wemo</string>
    
	<string name="under_construction">Under construction</string>
	
</resources>
