<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">		   	
 		        
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:text="@string/power_ip"/>

    <EditText 
        android:id="@+id/philips_hue_settings_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/power_ip_desc"
        android:textSize="20sp"
        android:maxLength="30"
        android:singleLine="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
   	   	
	    <Button
	        android:id="@+id/philips_hue_settings_connect_with_address"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:text="@string/light_connect_address_settings_btn"/>

 		   <Button
	        android:id="@+id/philips_hue_settings_find"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:text="@string/light_find_settings_btn"/>
	</LinearLayout>
</LinearLayout>