<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dip"
    android:orientation="vertical"
    android:background="#DDFF8000" >

    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    
	    <ImageView 
	        android:layout_width="50sp"
	        android:layout_height="50sp"
	        android:src="@drawable/home"
	        android:contentDescription="@null"/>
    
	    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="25sp"
		        android:textStyle="bold"
		        android:text="@string/widget_light_title"
		        android:textColor="@color/black"
		        android:layout_gravity="center_vertical"/>
    </LinearLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:background="@drawable/back">
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
            style="@android:style/TextAppearance.Medium"
	        android:text="@string/widget_light_desc"
	        android:layout_gravity="center_vertical"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"/>
    
	    <Button
	        android:id="@+id/button_light_on"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/widget_light_on"
	        android:layout_toLeftOf="@+id/button_light_off"
	        android:layout_centerVertical="true"/>
	    
	    <Button 
	        android:id="@id/button_light_off"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/widget_light_off"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true"/>
	    
    </RelativeLayout>
</LinearLayout>